--- a/middle/index.html
+++ b/middle/index.html
@@ -1,3 +1,3 @@
-<a href="/unit5/">unit5</a>
-<a href="/unit6/">unit6</a>
-<a href="/..">..</a>
+<a href="./unit5">unit5</a>
+<a href="./unit6">unit6</a>
+<a href="..">..</a>
