--- a/middle/index.html
+++ b/middle/index.html
@@ -1,3 +1,3 @@
-<a href="./unit5">unit5</a>
-<a href="./unit6">unit6</a>
+<a href="./unit5">unit5</a><br/>
+<a href="./unit6">unit6</a><br/>
 <a href="..">..</a>
